# dagmate

./: .env  .gitignore  .pre-commit-config.yaml  DagsterGRPC  Readme.md  config.yml  dagster.yaml  docker-compose.yaml  grpc_server.py  main.py  pipelines.py  pyproject.toml  requirements.txt  utils.py  workspace.yaml
app/: __init__.py  config.yml  dagger.py  main.py  pipelines.py  utils.py
app/inference/: __conf__.py  __init__.py  b.py
app/preprocessing/: c.py
app/training/: __conf__.py  c.py
conf/: config.yml
dagger/: core.py  utils.py
dagmate/: core.py  utils.py
pipelines/: extraction.py  preprocessing.py  utils.py
preprocessing/: __conf__.py  __init__.py  a.py  b.py  c.py  config.py  d.py
src/preprocessing/: a.py
src/training/: a.py  d.py
tmplwj6j3ar/history/: runs.db
tmplwj6j3ar/history/runs/: index.db
tmplwj6j3ar/schedules/: schedules.db
training/: __conf__.py
