[tool.poetry]
name = "dagmate"
version = "0.1.2"
description = "Make your Dagster deployment faster and easier with Dagmate"
authors = ["Anoop Sharma"]

[tool.poetry.dependencies]
python = "^3.7"
dagster = "^0.14.13"
dagit = "^0.14.13"
dagster-graphql = "^0.14.13"
protobuf = "~=3.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
